# snoot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  generator.sh  main.cpp
src/: display.cpp  display.h  log_item.cpp  log_item.h  logger.cpp  logger.h  monitor.cpp  monitor.h  processor.cpp  processor.h  reader.cpp  reader.h
test/: CMakeLists.txt  log_item_test.cpp  monitor_test.cpp  utils.h
